--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Game1.css">
+    <link rel="stylesheet" href="Style.css">
     
 </head>
 <body>
@@ -39,3 +39,4 @@
     
 </body>
 </html>
+
